Source/WebKit2/UIProcess/gtk/WebInspectorProxyGtk.cpp
@@ -74,7 +74,6 @@ WebPageProxy* WebInspectorProxy::platformCreateInspectorPage()
     preferences->setDeveloperExtrasEnabled(true);
     preferences->setLogsPageMessagesToSystemConsoleEnabled(true);
 #endif
-    preferences->setAllowFileAccessFromFileURLs(true);
     preferences->setJavaScriptRuntimeFlags({
     });
     RefPtr<WebPageGroup> pageGroup = WebPageGroup::create(inspectorPageGroupIdentifier(), false, false);
